--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "author": "Rais U Ahmed",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
+    "firebase-admin": "^9.2.0",
+    "mongodb": "^3.6.2"
   }
 }
